# toast

./: .gitignore  Cargo.toml  GNUmakefile  Makefile  README.md  limine.cfg  x86_64-toast.json
kernel/: Cargo.toml  GNUmakefile  linker.ld
kernel/debug/.fingerprint/autocfg-20828532232d1b47/: lib-autocfg  lib-autocfg.json
kernel/debug/.fingerprint/crossbeam-utils-efc78eb40283eb0c/: build-script-build-script-build  build-script-build-script-build.json
kernel/debug/.fingerprint/lock_api-26bc45f0b8d7ee9a/: build-script-build-script-build  build-script-build-script-build.json
kernel/debug/.fingerprint/maybe-uninit-75531185ee575293/: build-script-build-script-build  build-script-build-script-build.json
kernel/debug/.fingerprint/rustversion-2454a0579c786ec0/: run-build-script-build-script-build  run-build-script-build-script-build.json
kernel/debug/.fingerprint/rustversion-57cc1c503e9a2fa5/: build-script-build-script-build  build-script-build-script-build.json
kernel/debug/.fingerprint/rustversion-e1dd564b7027d48c/: dep-lib-rustversion  lib-rustversion  lib-rustversion.json
kernel/debug/.fingerprint/toast-d618278d3200053a/: build-script-build-script-build  build-script-build-script-build.json
kernel/debug/.fingerprint/x86-ffac8f17da3e9049/: build-script-build-script-build  (+1 more)
kernel/src/: framebuffer.rs  main.rs  serial.rs  vga_buffer.rs
kernel/src/arch/: mod.rs
kernel/src/debugger/: mod.rs
kernel/src/drivers/: cpuid.rs  fbdev.rs  mod.rs
kernel/src/fs/: mod.rs  ramfs.rs
kernel/src/graphics/: framebuffer.rs  framebuffer_device.rs  mod.rs  vga_buffer.rs  writer.rs
kernel/src/interrupts/: global_descriptor_table.rs  interrupt_descriptor_table.rs  interrupt_service_routines.rs  mod.rs
kernel/src/memory/: buddy_allocator.rs  linear_frame_allocator.rs  mod.rs
kernel/src/task/: keyboard.rs
kernel/src/utils/: bitmap_btree.rs  bitutils.rs  fonts.rs  mod.rs  tests.rs
src/: lib.rs  (+3 more)
(+103 files in other folders)
