[package]
name = "toast"
version = "0.1.0"
edition = "2021"
authors = ["Emma Plante"]

[lib]
crate-type = ["staticlib"]

[[test]]
name = "should_panic"
harness = false

[dependencies]
rlibc = "1.0"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
bitflags = "2.4.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
